link to github in setup

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 writing.
                 <br>
                 blindwrite is in a alpha state. Please report issues on
-                github.
+                <a href"https://github.com/Bubblepoint/blindwrite">github</a>.
                 <br>
                 <br>
                 Important features:
