link to github in header added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                 font-size: 15px;
                 margin: 30px 0px 0px 0px;
             }
+            .github {
+                font-size: 15px;
+                color: #000000;
+            }
             body {
                 overflow: hidden;
                 background-color:  #669966;
@@ -99,6 +103,7 @@
             <span class="keycap">I</span>
             <span class="keycap">T</span>
             <span class="keycap">E</span>
+            <a class="github" href="https://github.com/Bubblepoint/blindwrite" target="_blank">show on github</a>
         </header>
         <section id="welcome" class="hide">
             <h1>Welcome to blindwrite</h1>
