small changes on welcome site

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 blindwrite is a completly free website to learn 10 finger
                 writing.
                 <br>
-                blindwrite is in a alpha state. Please report issues on
+                blindwrite is in a early development state. Please report issues on
                 <a href="https://github.com/Bubblepoint/blindwrite">github</a>.
                 <br>
                 <br>
@@ -34,10 +34,10 @@
                 <ul>
                     <li>completly free</li>
                     <li>no registration</li>
-                    <li>supports special keyboard design</li>
-                    <li>supports special and own keyboard layouts</li>
-                    <li>no personal data stored on the server</li>
                     <li>open source</li>
+                    <li>supports special keyboard design</li>
+                    <li>supports special/own keyboard layouts</li>
+                    <li>no personal data stored on the server</li>
                 </ul>
                 <button id="startSetup">Let's start</button>
         </section>
