small html improvements

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
+        <meta charset="UTF-8">
         <link href='https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700'
-        rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css" href="main.css">
+        rel='stylesheet'>
+        <link rel="stylesheet" href="main.css">
         <title>Blindwrite - Your way to 10 finger writing</title>
     </head>
     <body onload="init();">
