use new generator function

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     </section>
     <script src="keyboard.js"></script>
     <script src="language.js"></script>
+    <script src="dictionary/dict.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
