own layout rewrite (preparation)

--- a/index.html
+++ b/index.html
@@ -71,8 +71,15 @@
     </selection>
     <selection id="setupLayout" class="hide">
       <h1>Setup layout</h1>
-      <p>Click the key for the following letter:</p>
-      <p id="setupLayoutKey">X</p>
+      <p>How to:</p>
+      <ol>
+        <li>Click on the key you like to set</li>
+        <li>Press the letter for the selected key</li>
+        <li>Redo, till all letters are set</li>
+      </ol>
+      <p>Letters to set:</p>
+      <p id="letters"></p>
+      <button id="setupLayoutSave">save</button>
       <div id="setupLayoutKeyboard" class="keyboard"></div>
     </selection>
     <section id="exercise" class="hide">
